--- a/7.0/Dockerfile.amd64
+++ b/7.0/Dockerfile.amd64
@@ -158,6 +158,7 @@ RUN useradd --system --create-home suricata && \
 
 VOLUME /var/log/suricata
 VOLUME /var/lib/suricata
+VOLUME /var/run/suricata
 VOLUME /etc/suricata
 
 COPY /docker-entrypoint.sh /
