--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -2,7 +2,6 @@ name: nightly
 
 on:
   schedule:
-    # 3:33am wherever this is run...
     - cron: "7 21 * * *"
   workflow_dispatch:
 
@@ -12,7 +11,6 @@ jobs:
     strategy:
       matrix:
         arch: [amd64, arm64v8]
-        arg: [~, "profiling"]
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
@@ -23,10 +21,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - run: ../deploy.sh --build --push ${{ matrix.arch }} ${{ matrix.arg }}
+      - run: ../deploy.sh --build ${{ matrix.arch }}
         working-directory: master
-      # - run: docker push jasonish/suricata:master-${{ matrix.arch }}
-      # - run: docker push jasonish/suricata:master-${{ matrix.arch }}-profiling
 
   push-master:
     runs-on: ubuntu-20.04
@@ -39,5 +35,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - run: ../deploy.sh --manifest
+      - run: ../deploy.sh --push --manifest
         working-directory: master
