--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,41 +8,17 @@ on:
 
 jobs:
 
-  build-6-0:
-    runs-on: ubuntu-20.04
+  build:
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
+        version: ["master", "7.0", "6.0"]
         arch: [amd64, arm32v6, arm64v8]
+        variant: [~, profiling]
       fail-fast: false
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
-      - run: ../deploy.sh --build ${{ matrix.arch }}
-        working-directory: "6.0"
-
-  build-7-0:
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        arch: [amd64, arm64v8]
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v2
-      - uses: docker/setup-qemu-action@v1
-      - uses: docker/setup-buildx-action@v1
-      - run: ../deploy.sh --build ${{ matrix.arch }}
-        working-directory: "7.0"
-
-  build-master:
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        arch: [amd64, arm64v8]
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v2
-      - uses: docker/setup-qemu-action@v1
-      - uses: docker/setup-buildx-action@v1
-      - run: ../deploy.sh --build ${{ matrix.arch }}
-        working-directory: "master"
+      - run: ARCH=${{ matrix.arch }} ../build.sh ${{ matrix.variant }}
+        working-directory: ${{ matrix.version }}
