--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -6,42 +6,25 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-master:
+  master:
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        arch: [amd64, arm64v8]
-      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
+  
       - name: Docker Hub Login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-      - run: ../deploy.sh --build ${{ matrix.arch }}
-        working-directory: master
-
-  push-master:
-    runs-on: ubuntu-20.04
-    needs: [build-master]
-    steps:
-      - run: echo "All containers built."
-      - uses: actions/checkout@v2
-      - name: Docker Hub Login
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Login to Quay.io
+      - name: Quay.io Login
         uses: docker/login-action@v3
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_ROBOT_TOKEN }}
-
-      - run: ../deploy.sh --push --manifest
+  
+      - run: ../deploy.sh --build --push --manifest
         working-directory: master
