--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,12 +8,27 @@ on:
 
 jobs:
 
+  build-6:
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        version: ["6.0"]
+        arch: [amd64, arm32v6, arm64v8]
+        variant: [~, profiling]
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - run: ARCH=${{ matrix.arch }} ../build.sh ${{ matrix.variant }}
+        working-directory: ${{ matrix.version }}
+
   build:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        version: ["master", "7.0", "6.0"]
-        arch: [amd64, arm32v6, arm64v8]
+        version: ["master", "7.0"]
+        arch: [amd64, arm64v8]
         variant: [~, profiling]
       fail-fast: false
     steps:
