github-ci: fixes for new build script
Will likely need some tweaking.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -26,5 +26,5 @@ jobs:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_ROBOT_TOKEN }}
   
-      - run: ../deploy.sh --build --push --manifest
+      - run: ../build.sh --build --push --manifest
         working-directory: master
