--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,10 @@ jobs:
     strategy:
       matrix:
         version: ["master", "7.0"]
-        arch: [amd64, arm64]
-        variant: [~, profiling]
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
-      - run: ARCH=${{ matrix.arch }} ../build.sh ${{ matrix.variant }}
+      - run: ../build.sh
         working-directory: ${{ matrix.version }}
