Add rules profiling capability

--- a/main/Dockerfile.arm64
+++ b/main/Dockerfile.arm64
@@ -74,6 +74,7 @@ RUN ./configure \
         --enable-hiredis \
         --enable-geoip \
         --enable-ebpf \
+        --enable-profiling-rules \
         ${CONFIGURE_ARGS}
 
 ARG CORES=2
