--- a/7.0/Dockerfile.arm64
+++ b/7.0/Dockerfile.arm64
@@ -80,6 +80,7 @@ RUN ./configure \
         --enable-geoip \
         --enable-ebpf \
 	--enable-dpdk \
+        --enable-profiling-rules \
         ${CONFIGURE_ARGS}
 
 ARG CORES=2
