--- a/8.0/Dockerfile.amd64
+++ b/8.0/Dockerfile.amd64
@@ -79,6 +79,7 @@ RUN ./configure \
         --enable-geoip \
         --enable-ebpf \
         --enable-dpdk \
+        --enable-profiling-rules \
         ${CONFIGURE_ARGS}
 
 ARG CORES=2
