--- a/8.0/Dockerfile.arm64
+++ b/8.0/Dockerfile.arm64
@@ -81,6 +81,7 @@ RUN ./configure \
         --enable-geoip \
         --enable-ebpf \
         --enable-dpdk \
+        --enable-profiling-rules \
         ${CONFIGURE_ARGS}
 
 ARG CORES=2
