--- a/main/Dockerfile.arm64
+++ b/main/Dockerfile.arm64
@@ -73,6 +73,7 @@ RUN ./configure \
         --enable-hiredis \
         --enable-geoip \
         --enable-ebpf \
+        --enable-profiling-rules \
         ${CONFIGURE_ARGS}
 
 ARG CORES=2
