--- a/main/Dockerfile.amd64
+++ b/main/Dockerfile.amd64
@@ -53,7 +53,7 @@ ARG VERSION
 
 WORKDIR /src
 
-RUN if [ "${VERSION}" = "master" ]; then \
+RUN if [ "${VERSION}" = "main" ]; then \
 	git clone https://github.com/OISF/suricata.git suricata-${VERSION}; \
 	git clone https://github.com/OISF/libhtp.git suricata-${VERSION}/libhtp; \
         (cd suricata-${VERSION}/suricata-update && \
