main/amd64: use hyperscan from main repos
We had to pin it for a while, but that issue is fixed.

--- a/main/Dockerfile.amd64
+++ b/main/Dockerfile.amd64
@@ -45,7 +45,7 @@ RUN dnf -y install \
         zlib-devel
 
 RUN if [ "$(arch)" = "x86_64" ]; then \
-       dnf -y install https://kojipkgs.fedoraproject.org/packages/hyperscan/5.4.0/4.el9/x86_64/hyperscan-5.4.0-4.el9.x86_64.rpm https://kojipkgs.fedoraproject.org/packages/hyperscan/5.4.0/4.el9/x86_64/hyperscan-devel-5.4.0-4.el9.x86_64.rpm; \
+       dnf -y install hyperscan-devel; \
 fi
 
 ARG VERSION
@@ -123,7 +123,7 @@ RUN \
         tcpdump \
         which \
         zlib && \
-        if [ "$(arch)" = "x86_64" ]; then dnf -y install https://kojipkgs.fedoraproject.org/packages/hyperscan/5.4.0/4.el9/x86_64/hyperscan-5.4.0-4.el9.x86_64.rpm; fi && \
+        if [ "$(arch)" = "x86_64" ]; then dnf -y install hyperscan; fi && \
         dnf clean all && \
         find /etc/logrotate.d -type f -not -name suricata -delete
 
