--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  master:
+  main:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
@@ -30,4 +30,4 @@ jobs:
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
   
       - run: ../build.sh --build --push --manifest
-        working-directory: master
+        working-directory: main
