--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,11 @@ jobs:
       matrix:
         version: ["main", "7.0", "8.0"]
         arch: ["amd64", "arm64"]
+        variant: ["regular", "profiling"]
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
-      - run: ../build.sh --arch ${{ matrix.arch }}
+      - run: ../build.sh --arch ${{ matrix.arch }} --variant ${{ matrix.variant }}
         working-directory: ${{ matrix.version }}
