--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -5,14 +5,25 @@ on:
     - cron: "7 21 * * *"
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  main:
-    runs-on: ubuntu-22.04
+  build:
+    runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        version: ["main", "7.0", "8.0"]
+        arch: ["amd64", "arm64"]
+        variant: ["regular", "profiling"]
+      fail-fast: false
     steps:
       - uses: actions/checkout@v4
-      - uses: docker/setup-qemu-action@v3
-      - uses: docker/setup-buildx-action@v3
-  
+
+      - name: Setup QEMU for ARM64 builds
+        run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
       - name: Docker Hub Login
         uses: docker/login-action@v3
         with:
@@ -28,6 +39,37 @@ jobs:
 
       - name: Log in to ghcr.io registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-  
-      - run: ../build.sh --build --push --manifest
-        working-directory: main
+
+      - name: Build and push image
+        working-directory: ${{ matrix.version }}
+        run: ../build.sh --arch ${{ matrix.arch }} --variant ${{ matrix.variant }} --push
+
+  manifest:
+    needs: build
+    runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        version: ["main", "7.0", "8.0"]
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Docker Hub Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Quay.io Login
+        uses: docker/login-action@v3
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_ROBOT_TOKEN }}
+
+      - name: Log in to ghcr.io registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Create and push manifests
+        working-directory: ${{ matrix.version }}
+        run: ../build.sh --no-build --manifest
