--- a/8.0/Dockerfile.amd64
+++ b/8.0/Dockerfile.amd64
@@ -11,6 +11,7 @@ RUN dnf -y install \
         cargo \
         cbindgen \
         diffutils \
+        patch \
         dpdk-devel \
         elfutils-libelf-devel \
         file \
@@ -63,6 +64,9 @@ else \
 fi
 
 WORKDIR /src/suricata-${VERSION}
+
+COPY /profiling.patch /tmp/profiling.patch
+RUN patch -p1 < /tmp/profiling.patch
 
 ARG CONFIGURE_ARGS
 
